--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = topic-db-BRETTKROMKAMP
+name = topic-db
 version = 2.0.0
 author = Brett Alistair Kromkamp
 author_email = brettkromkamp@gmail.com
@@ -23,15 +23,9 @@ classifiers =
     Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
-package_dir =
-    = topicdb
 packages = find:
 python_requires = >=3.7
 install_requires =
     python-slugify>=5.0.2
     pytest>=7.0.0
     typed-tree>=1.0.6
-
-[options.packages.find]
-where = topicdb
-
