--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = topic-db
-version = 2.0.3
+version = attr: topicdb.version.__version__
 author = Brett Alistair Kromkamp
 author_email = brettkromkamp@gmail.com
 description = TopicDB is a topic map-based graph store (using SQLite for persistence)
