Add tests and miscellaneous (minor) updates

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,19 +10,20 @@ url = https://github.com/brettkromkamp/topic-db
 project_urls =
     Bug Tracker = https://github.com/brettkromkamp/topic-db/issues
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     Programming Language :: Python :: Implementation :: CPython
     Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
 python_requires = >=3.10
 install_requires =
-    python-slugify>=8.0.1
-    pytest>=7.1.2
+    python-slugify>=8.0.4
+    pytest>=8.3.2
     typed-tree>=1.0.8
